feat: configuração inicial do projeto de testes automatizados TCAP

--- a/package.json
+++ b/package.json
@@ -15,16 +15,11 @@
     "raspadinha": "npx bddgen && npx playwright test --grep @instantaneoRaspadinha",
     "contratacao": "npx bddgen && npx playwright test --grep @contratacao",
     "livelo": "npx bddgen && npx playwright test --grep @livelo",
-    "NomeSocial04": "npx bddgen && npx playwright test --grep @NomeSocial_CT004",
-    "bsidgetcep": "npx bddgen && npx playwright test --grep @bsidgetcep",
-    "validacpf": "npx bddgen && npx playwright test --grep @validacpf",
-    "novoerroprivado": "npx bddgen && npx playwright test --grep @novoerroprivado",
-    "consultaerroprivado": "npx bddgen && npx playwright test --grep @consultaerroprivado",
-    "erroprivado": "npx bddgen && npx playwright test --grep @erroprivado",
-    "resumo": "npx bddgen && npx playwright test --grep @bsidresumo",
-    "gerarCpf": "npx bddgen && npx playwright test --grep @gerarCpf",
-    "bsid": "npx bddgen && npx playwright test --grep @bsid",
-    "processachancela": "npx bddgen && npx playwright test --grep @processachancela"
+    "gerar-pdf-manual": "node gerarPDFManual.js",
+    "gerar-relatorio-completo": "node gerarRelatorioCompleto.js",
+    "testar-pdf": "node testar-pdf.js",
+    "limpar-testes": "node limpar-testes.js",
+    "tests-com-pdf": "npm run limpar-testes && npx bddgen && npx playwright test && echo '📄 PDF gerado automaticamente em reports/relatorio-testes.pdf'"
   },
   "dependencies": {
     "dotenv": "^16.5.0"
